force-app/main/default/objects/WelcomeCall_Product__c/WelcomeCall_Product__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Master Product using for scripting ( Welcome Call )</description>
    <label>Product</label>
</CustomObject>