force-app/main/default/objects/WelcomeCall_Product__c/fields/WelcomeCall_Category__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Category__c</fullName>
    <label>Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>