force-app/main/default/objects/WelcomeCall_Product__c/fields/WelcomeCall_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Product_Group__c</fullName>
    <label>Product Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>