force-app/main/default/objects/WelcomeCall_Product__c/fields/WelcomeCall_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Product_Name__c</fullName>
    <label>Product Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>