force-app/main/default/objects/WelcomeCall_Product__c/listViews/All_Data_Product.listView-meta.xml
<ListView>
    <fullName>All_Data_Product</fullName>
    <columns>NAME</columns>
    <columns>WelcomeCall_Product_Name__c</columns>
    <columns>WelcomeCall_Product_Group__c</columns>
    <columns>WelcomeCall_Category__c</columns>
    <columns>WelcomeCall_Type__c</columns>
    <columns>WelcomeCall_Fg_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Data Product</label>
    <language>en_US</language>
</ListView>