force-app/main/default/objects/WelcomeCall_Product__c/listViews/Search_Product.listView-meta.xml
<ListView>
    <fullName>Search_Product</fullName>
    <columns>NAME</columns>
    <columns>WelcomeCall_Category__c</columns>
    <columns>WelcomeCall_Fg_Active__c</columns>
    <columns>WelcomeCall_Product_Group__c</columns>
    <columns>WelcomeCall_Product_Name__c</columns>
    <columns>WelcomeCall_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>MFP</value>
    </filters>
    <label>Search Product</label>
    <language>en_US</language>
</ListView>